[project]
name = "podcast"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "docling (>=2.32.0,<3.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "kokoro (>=0.9.4,<0.10.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "ordered-set (>=4.1.0,<5.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "pypinyin (>=0.54.0,<0.55.0)",
    "cn2an (>=0.5.23,<0.6.0)",
    "pypinyin-dict (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "podcast", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
